--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,12 +7,21 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.thymeleaf.cache=false
 
+# Mail Setting
+
+spring.mail.default-encoding=UTF-8
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=
 spring.mail.password=
-spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.starttls.required=true
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.debug=true
+spring.mail.properties.mail.mime.charset=UTF-8
+spring.mail.properties.mail.transport.protocol=smtp
+
+logging.level.org.springframework.mail=DEBUG
 
 #spring.thymeleaf.prefix=classpath:/templates/
 #spring.thymeleaf.suffix=.html
